fix for scrollbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+	height: 100%; 
+    margin-bottom: 1px; 
+}
 body {
 	font-size:1em;
 /* Helvetica/Arial-based sans serif stack */
@@ -52,7 +56,6 @@ textarea, input {
 #container {
     width:95%;
 	max-width:50em;
-	min-height:400px;
 	border:1px #444 solid;
 	border-radius:4px;
 	margin: 2% auto;
